[project]
name = "comfyui-depthcrafter-nodes"
description = "Implementation of DepthCrafter nodes for ComfyUI, create consistent depth maps for your videos."
version = "1.2.0"
license = {file = "LICENSE"}
dependencies = ["torch", "diffusers>=0.29.1", "accelerate>=0.17.0"]

[project.urls]
Repository = "https://github.com/akatz-ai/ComfyUI-DepthCrafter-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "akatz"
DisplayName = "ComfyUI-DepthCrafter-Nodes"
Icon = "https://i.imgur.com/aiqQI7U.png"
